--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,58 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+        <!-- main content view-->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        >
 
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-    <FrameLayout android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <FrameLayout android:id="@+id/containerTitle1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary">
+            <!-- android:layout_height="0dip"
+                android:layout_weight="10"-->
+        </FrameLayout>
 
-    <!-- android:layout_gravity="start" tells DrawerLayout to treat
-         this as a sliding drawer on the left side for left-to-right
-         languages and on the right side for right-to-left languages.
-         If you're not building against API 17 or higher, use
-         android:layout_gravity="left" instead. -->
-    <!-- The drawer is given a fixed width in dp and extends the full height of
-         the container. -->
+        <FrameLayout android:id="@+id/container1"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/containerTitle1"
+            android:layout_height="wrap_content">
+            <!--      android:layout_height="0dip"
+            android:layout_weight="40" -->
+
+       </FrameLayout>
+
+       <FrameLayout android:id="@+id/containerTitle2"
+           android:layout_width="match_parent"
+           android:layout_below="@+id/container1"
+           android:layout_height="wrap_content"
+           android:textColor="@color/colorPrimary">
+           <!--      android:layout_height="0dip"
+           android:layout_weight="10" -->
+
+       </FrameLayout>
+
+       <FrameLayout android:id="@+id/container2"
+           android:layout_width="match_parent"
+           android:layout_below="@+id/containerTitle2"
+           android:layout_height="wrap_content"
+           >
+           <!-- android:layout_height="0dip"
+     android:layout_weight="40"-->
+ </FrameLayout>
+
+</LinearLayout>
+
+<!-- The drawer  -->
     <fragment android:id="@+id/navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
@@ -26,4 +60,6 @@
         android:name="fr.solucom.community.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
 
+
 </android.support.v4.widget.DrawerLayout>
+
