--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,56 +8,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
         <!-- main content view-->
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        >
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <FrameLayout android:id="@+id/containerTitle1"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimary">
-            <!-- android:layout_height="0dip"
-                android:layout_weight="10"-->
-        </FrameLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <FrameLayout android:id="@+id/container1"
-            android:layout_width="match_parent"
-            android:layout_below="@+id/containerTitle1"
-            android:layout_height="wrap_content">
-            <!--      android:layout_height="0dip"
-            android:layout_weight="40" -->
+            <FrameLayout
+                android:id="@+id/container1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5" />
 
-       </FrameLayout>
+            <FrameLayout
+                android:id="@+id/container2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5" />
 
-       <FrameLayout android:id="@+id/containerTitle2"
-           android:layout_width="match_parent"
-           android:layout_below="@+id/container1"
-           android:layout_height="wrap_content"
-           android:textColor="@color/colorPrimary">
-           <!--      android:layout_height="0dip"
-           android:layout_weight="10" -->
+        </LinearLayout>
 
-       </FrameLayout>
+    </ScrollView>
 
-       <FrameLayout android:id="@+id/container2"
-           android:layout_width="match_parent"
-           android:layout_below="@+id/containerTitle2"
-           android:layout_height="wrap_content"
-           >
-           <!-- android:layout_height="0dip"
-     android:layout_weight="40"-->
- </FrameLayout>
-
-</LinearLayout>
-
-<!-- The drawer  -->
+    <!-- The drawer  -->
     <fragment android:id="@+id/navigation_drawer"
+        android:name="fr.solucom.community.NavigationDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:name="fr.solucom.community.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
 
 
