--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -1,15 +1,65 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="fr.solucom.community.HomeFragment">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:clickable="true"
+    card_view:cardCornerRadius="1dp">
 
-    <!-- Recycle view used -->
-    <android.support.v7.widget.RecyclerView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/eventsList"
-        />
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+
+        <ImageView
+            android:id="@+id/imageEvents"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:orientation="vertical"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/TitleEvents"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_above="@+id/Events_Title_1"
+            android:background="#50000000"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:textColor="#fff"
+            android:textSize="22dp" />
+
+
+        <TextView
+            android:id="@+id/Events_Title_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageEvents"
+            android:layout_marginBottom="2dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/Events_Title_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Events_Title_1"
+            android:layout_marginBottom="2dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:textSize="14dp" />
+
+        <Button
+            android:id="@+id/Events_buttom"
+            style="?android:buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Events_Title_2"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="4dp"
+            android:text="En savoir plus"
+            android:textColor="#000" />
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
